0.42:
 * Fixed bzr log command when no start date was specified (chrisf).

0.41:
 * Multi-monitor support using SDL 2.0 when available.
 * SDL 1.2 support is deprecated.
 * Full screen mode now uses desktop resolution by default.
 * Added --start-date, --stop-date 'YYYY-MM-DD hh:mm:ss' options.
 * Added --dir-name-depth option.
 * Changed --file-idle-time default value to 0.
 * Changed screenshot format to PNG.

0.40:
 * Added caption support.
 * Improved command line interoperability on Windows.
 * Fixed directory deletion short circuiting processing the rest of a commit.
 * Fixed issue loading non-ascii user image filenames on windows.
 * Ignore UTF-8 byte order mark at the start of lines in custom log files.
 * Fix to boost macros for Macs and non-GNU systems (mistydemeo).
 * Autotools improvements (flameeyes).

0.39:
 * Fixed blurry non power of 2 logos.
 * File colour changes now supported in custom logs (rmyorston).
 * Fixed building against Boost 1.50 (svenstaro).
 * Updated boost autoconf macros (flameeyes).
 * Autogen script (matthiaskrgr).

0.38:
 * New high quality sprites.
 * Fullscreen toggle with alt + enter.
 * Window is now resizable. -WIDTHxHEIGHT! creates a non-resizable window.
 * Lowered minimum zoom distance.
 * Use AM_CPPFLAGS in Makefile.am to allow passing custom CPPFLAGS.
 * Don't add files that match the path of a known directory.
 * Fixed divide by zero in text shader causing artifacts on some video cards.
 * Recursively search for repository directory when log-format not specified
   (thanks to Jörg Bachmann for original concept / prototype).
 * New dependency on Boost Filesystem.
 * Doubled the maximum zoom out distance.
 * Allow negative timestamps before 1970 in custom log (artzub).
 * Fix for UTF8-CPP checked.h compilation issue (vszakats).
 * Fixed bug causing missing characters in text.
 * Fixed --highlight-users option not using highlight-colour.
 * highlight-colour default changed to white.